Fixed editor buttons. Applied bootstrap button-shifting fix from 2.3.0-wip no. 6378.

--- a/flashdown/static/compile/custom.less
+++ b/flashdown/static/compile/custom.less
@@ -142,7 +142,7 @@ body {
 // Custom style for front/back of cards.
 .card-editor {
     .wmd-container {
-        width: 450px;
+        width: 500px;
         float: left;
         padding: 0 10px;
     }
