--- a/flashdown/static/css/bootstrap.css
+++ b/flashdown/static/css/bootstrap.css
@@ -6498,7 +6498,7 @@ body {
 
 .card-editor .wmd-container {
   float: left;
-  width: 450px;
+  width: 500px;
   padding: 0 10px;
 }
 
